# ctcs

./: CMakeLists.txt  LICENSE  README.md
include/ctcs/: ArithmeticCodingCompressor.h  CompressedString.h  EnglishCharModel.h  StringLiteral.h  ctcs.h
include/ctcs/internal/: ArithmeticCoder.h  ArithmeticCoding.h  ArithmeticCodingCommon.h  ArithmeticDecoder.h  IBitStream.h  OBitStream.h  VarInt.h
tests/: CMakeLists.txt  ctcs_test.cpp
